# stratego-ai

./: .gitignore  default.nix  macros.tex  plot.r  recall.tex  shell.nix  system-s.cabal  system-s.tex
case-studies/: Combine.hs  Main.hs  prepare.sh
case-studies/Pretty/: JavaScript.hs  PCF.hs
case-studies/arith/: arith.aterm  arith.str
case-studies/arrows/: .dir-locals.el  Main.hs  arrows.aterm  arrows.aterm.dep  arrows.rtree  build.sh  desugar.aterm  desugar.str  desugar2.ast  desugar2.dep  desugar2.str  desugar2core.aterm  desugar2core.str  desugar2corepp.aterm  meta-explode  rtg2sig  run.sh  sdf2rtg  test.hs  test.java  test.str
case-studies/cca/: cca-desugared.str  cca.aterm
case-studies/go2js/: go2js.aterm  pp-aterm  prepare.sh
case-studies/pcf/: libpcf.rtree  pcf.aterm  pcf.dep  pcf.java  pcf.str
src/: ATerm.hs  AbstractTypedSemantics.hs  AllocRecDepth.hs  CachedSemantics.hs  Cat.hs  Classes.hs  ConcreteSemantics.hs  DecompilerSemantics.hs  Example.hs  FuelSemantics.hs  GrammarSemantics.hs  HaskellPretty.hs  HoleSemantics.hs  Interpreter.hs  InterpreterArrow.hs  JSPretty.hs  Main.hs  Multiple.hs  NaiveSemantics.hs  NarrowInputSemantics.hs  PCFPretty.hs  PrettyPrint.hs  RegularTreeGrammar.hs  Result.hs  SharedSemantics.hs  Signature.hs  Single.hs  Sort.hs  Soundness.hs  Stack.hs  StackSemantics.hs  SubtypeRelation.hs  Syntax.hs  Term.hs  TypedSemantics.hs  UncertainResult.hs  Utils.hs  WildcardSemantics.hs  WildcardSemanticsDelayed.hs  WildcardSemanticsSoundness.hs  (+2 more)
src/Control/Arrow/: Append.hs  Fix.hs  Join.hs  Stack.hs  Try.hs
src/Control/Arrow/Transformer/: Deduplicate.hs  Power.hs  Result.hs  UncertainResult.hs
src/Control/Monad/: Result.hs
src/Data/: Order.hs  Powerset.hs  PowersetResult.hs  PowersetTypedResult.hs  Result.hs  Stack.hs  Term.hs  TermEnv.hs  TypedResult.hs  UncertainResult.hs
src/Data/Functor/: Strength.hs
test/: .dir-locals.el  AbstractTypedSemanticsSpec.hs  CaseStudiesSpec.hs  ConcreteSemanticsSpec.hs  GaloisSpec.hs  InterpreterSpec.hs  SubtypingSpec.hs  SyntaxSpec.hs  TypedSemanticsSpec.hs  WildcardSemanticsSpec.hs
