name:                system-s
version:             0.1.0.0
synopsis:            Abstract Interpreter for Stratego
-- description:         
license:             BSD3
author:              Sven Keidel
maintainer:          s.keidel@tudelft.nl
copyright:           Copyright (c) 2016, Sven Keidel
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md, README
cabal-version:       >=1.20

data-files:          case-studies/arrows/desugar2core.aterm

library
  ghc-options:         -Wall
  exposed-modules:     ATerm,
                       Syntax,
                       Result,
                       Interpreter,
                       ConcreteSemantics,
                       WildcardSemantics
  build-depends:       base,
                       attoparsec,
                       containers,
                       mtl,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite specs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       system-s,
                       containers,
                       hspec,
                       mtl,
                       text
  default-language:    Haskell2010