name:                system-s
version:             0.2.0.0
synopsis:            Abstract Interpreter for Stratego
license:             BSD3
author:              Sven Keidel
maintainer:          s.keidel@tudelft.nl
copyright:           Copyright (c) 2017, Sven Keidel
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md, README
cabal-version:       >=1.20

data-files:          case-studies/arrows/arrows.aterm,
                     case-studies/pcf/pcf.aterm
                     case-studies/cca/cca.aterm

library
  ghc-options:         -Wall
  exposed-modules:     ATerm,
                       Syntax,
                       Result,
                       Interpreter,
                       ConcreteSemantics,
                       WildcardSemantics,
                       WildcardSemanticsSoundness,
                       PrettyPrint,
                       HaskellPretty,
                       PCFPretty
  build-depends:       base,
                       QuickCheck,
                       attoparsec,
                       containers,
                       hashable,
                       unordered-containers,
                       mtl,
                       pretty,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010

Executable case-studies
  Build-Depends:       base,
                       QuickCheck,
                       attoparsec,
                       containers,
                       hashable,
                       unordered-containers,
                       mtl,
                       pretty,
                       text,
                       system-s
  hs-source-dirs:      case-studies
  main-is:             Main.hs
  default-language:    Haskell2010

test-suite specs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       system-s,
                       containers,
                       hashable,
                       unordered-containers,
                       hspec,
                       QuickCheck,
                       pretty,
                       mtl,
                       text
  default-language:    Haskell2010